--- a/app/src/main/res/layout/row_guest_list.xml
+++ b/app/src/main/res/layout/row_guest_list.xml
@@ -9,14 +9,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="7"
+        android:padding="20dp"
+        android:textSize="15sp"
+        android:textColor="@color/colorPrimaryText"
         android:text="name" />
 
     <ImageView
         android:id="@+id/image_remove"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_menu_camera"
+        android:layout_height="60dp"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/remove"
         android:layout_weight="1"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         />
 
 </LinearLayout>
